tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__CoinsCoinsCoins-AAAAAAAAAAAAAAAAAAAAEA==__DragonWarrior-AAAAAAAAAAAAAAAAAAAKtA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2740,
  "prerequisites": [
    986
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Did your Dragon Heart drop into the void somehow? Or maybe you just want more? Buy one!",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Dragon Warrior",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": 72000,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    986
  ],
  "rewards": [],
  "tasks": []
}
